--- a/index.html
+++ b/index.html
@@ -1,19 +1,61 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Siskel's Daddy Movie History</title>
-	<link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+  <title>Siskel's Daddy Movie History</title>
+  <link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-	<h1>Movie History</h1>
-
-
-
-
-
-
-	<script type="text/javascript" src="dist/app.js"></script>
-
+  <h1>ODB</h1>
+  <div class="container" id="movieOutput">
+  </div>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Brand</a>
+      </div>
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <div>
+        <form>
+          <label class="checkbox-inline">
+            <input type="checkbox" value="">Search All Movies
+          </label>
+          <label class="checkbox-inline">
+            <input type="checkbox" value="">Search Your Movies
+          </label>
+        </form>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#" id="#signIn">Sign In</a></li>
+        <li><a href="#" class="hide" id="#signOut">Sign Out</a></li>
+      </ul>
+    </div>
+    <!-- /.container-fluid -->
+  </nav>
+  <div class="container">
+    <div class="btn-group btn-group-justified">
+      <a href="#" class="btn btn-primary">All</a>
+      <a href="#" class="btn btn-primary">Watched</a>
+      <a href="#" class="btn btn-primary">Not Watched</a>
+    </div>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script type="text/javascript" src="dist/app.js"></script>
+  <!-- <script src="/dist/js/bootstrap.min.js"></script> -->
 </body>
+
 </html>
