--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div id="pageWrapper">
 	  <h1>ODB</h1>
-	  <div class="container" id="movieOutput">
+	  <div class="container">
 	  </div>
 	  <nav class="navbar navbar-default">
 	    <div class="container-fluid">
@@ -26,35 +26,36 @@
 	      </div>
 	      <form class="navbar-form navbar-left">
 	        <div class="form-group">
-	          <input type="text" class="form-control" placeholder="Search">
+	          <input id="query" type="text" class="form-control" placeholder="Search">
 	        </div>
-	        <button type="submit" class="btn btn-default">Submit</button>
+	        <button id="search" type="submit" class="btn btn-default">Search</button>
 	      </form>
 	      <div>
 	        <form>
-	          <label class="checkbox-inline">
-	            <input type="checkbox" value="">Search All Movies
+	          <label class="radio-inline">
+	            <input id="radioAll" type="radio" name="radioFilter" checked="checked" value="">Search All Movies
 	          </label>
-	          <label class="checkbox-inline">
-	            <input type="checkbox" value="">Search Your Movies
+	          <label class="radio-inline">
+	            <input id="radioYour" type="radio" name="radioFilter" disabled="disabled" value="">Search Your Movies
 	          </label>
 	        </form>
 	      </div>
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#" id="#signIn">Sign In</a></li>
-	        <li><a href="#" class="hide" id="#signOut">Sign Out</a></li>
+	        <li><a href="#" id="signIn">Sign In</a></li>
+	        <li><a href="#" class="hide" id="signOut">Sign Out</a></li>
 	      </ul>
 	    </div>
 	    <!-- /.container-fluid -->
 	  </nav>
 	    <div class="btn-group btn-group-justified">
-	      <a href="#" class="btn btn-primary">All</a>
-	      <a href="#" class="btn btn-primary">Watched</a>
-	      <a href="#" class="btn btn-primary">Not Watched</a>
+	      <a id="allMovies" href="#" class="btn btn-primary">All</a>
+	      <a id="watchedMovies" href="#" class="btn btn-primary">Watched</a>
+	      <a id="notWatchedMovies" href="#" class="btn btn-primary">Not Watched</a>
 	    </div>
+	    <div class="container" id="movieOutput"></div>
 	</div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script type="text/javascript" src="dist/app.js"></script>
+  <script type="text/javascript" src="/dist/app.js"></script>
   <!-- <script src="/dist/js/bootstrap.min.js"></script> -->
 </body>
 
