--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	        <div class="form-group">
 	          <input id="query" type="text" class="form-control" placeholder="Search">
 	        </div>
-	        <button id="search" type="submit" class="btn btn-default">Search</button>
+	        <button id="search" type="button" class="btn btn-default">Search</button>
 	      </form>
 	      <div>
 	        <form>
