--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 <body>
 	<div id="pageWrapper">
-	  <h1>ODB</h1>
 	  <div class="container">
 	  </div>
 	  <nav class="navbar navbar-default">
@@ -22,10 +21,12 @@
 	          <span class="icon-bar"></span>
 	          <span class="icon-bar"></span>
 	        </button>
-	        <a class="navbar-brand" href="#">Brand</a>
-	      </div>
+<!-- 	        <div class="nav navbar-nav navbar-left">
+	      	</div>
+ -->	      </div>
 	      <form class="navbar-form navbar-left">
 	        <div class="form-group">
+	        	<i class="glyphicon glyphicon-search"></i>
 	          <input id="query" type="text" class="form-control" placeholder="Search" size= "100">
 	        </div>
 	        <button id="search" type="button" class="btn btn-default">Search</button>
@@ -40,7 +41,12 @@
 	    </div>
 	    <!-- /.container-fluid -->
 	  </nav>
-	    <div class="btn-group btn-group-justified">
+			
+			<div id='breadCrumbs'>
+				<h1>Movie History ></h1>
+			</div>
+	    
+	    <div id='viewTracker' class="btn-group btn-group-justified">
 	      <a id="showUntrackedBtn" href="#" class="btn btn-primary">Show Untracked</a>
 	      <a id="showUnwatchedBtn" href="#" class="btn btn-primary">Show Unwatched</a>
 	      <a id="showWatchedBtn" href="#" class="btn btn-primary">Show Watched</a>
