--- a/index.html
+++ b/index.html
@@ -4,58 +4,60 @@
 <head>
   <title>Siskel's Daddy Movie History</title>
   <link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
+  <link href="/lib/node_modules/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
-	<div id="pageWrapper">
-	  <div class="container">
-	  </div>
-	  <nav class="navbar navbar-default">
-	    <div class="container-fluid">
-	      <!-- Brand and toggle get grouped for better mobile display -->
-	      <div class="navbar-header">
-	        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	          <span class="sr-only">Toggle navigation</span>
-	          <span class="icon-bar"></span>
-	          <span class="icon-bar"></span>
-	          <span class="icon-bar"></span>
-	        </button>
-<!-- 	        <div class="nav navbar-nav navbar-left">
+  <div id="pageWrapper">
+    <div class="container">
+    </div>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <!-- 	        <div class="nav navbar-nav navbar-left">
 	      	</div>
- -->	      </div>
-	      <form class="navbar-form navbar-left">
-	        <div class="form-group">
-	        	<i class="glyphicon glyphicon-search"></i>
-	          <input id="query" type="text" class="form-control" placeholder="Search" size= "100">
-	        </div>
-	        <button id="search" type="button" class="btn btn-default">Search</button>
-	      </form>
-	      <div>
-
-	      </div>
-	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#" id="signIn">Sign In</a></li>
-	        <li><a href="#" class="hide" id="signOut">Sign Out</a></li>
-	      </ul>
-	    </div>
-	    <!-- /.container-fluid -->
-	  </nav>
-			
-			<div id='breadCrumbs'>
-				<h1>Movie History ></h1>
-			</div>
-	    
-	    <div id='viewTracker' class="btn-group btn-group-justified">
-	      <a id="showUntrackedBtn" href="#" class="btn btn-primary">Show Untracked</a>
-	      <a id="showUnwatchedBtn" href="#" class="btn btn-primary">Show Unwatched</a>
-	      <a id="showWatchedBtn" href="#" class="btn btn-primary">Show Watched</a>
-	      <a id="favoritesBtn" href="#" class="btn btn-primary">Favortites</a>
-	    </div>
-	    <div class="container" id="movieOutput"></div>
-	</div>
+ --></div>
+        <form class="navbar-form navbar-left">
+          <div class="form-group">
+            <i class="glyphicon glyphicon-search"></i>
+            <input id="query" type="text" class="form-control" placeholder="Search" size="100">
+          </div>
+          <button id="search" type="button" class="btn btn-default">Search</button>
+        </form>
+        <div>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#" id="signIn">Sign In</a></li>
+          <li><a href="#" class="hide" id="signOut">Sign Out</a></li>
+        </ul>
+      </div>
+      <!-- /.container-fluid -->
+    </nav>
+    <div id='breadCrumbs'>
+      <h1>Movie History ></h1>
+    </div>
+    <div id='viewTracker' class="btn-group btn-group-justified">
+      <a id="showUntrackedBtn" href="#" class="btn btn-primary">Show Untracked</a>
+      <a id="showUnwatchedBtn" href="#" class="btn btn-primary">Show Unwatched</a>
+      <a id="showWatchedBtn" href="#" class="btn btn-primary">Show Watched</a>
+      <a id="favoritesBtn" href="#" class="btn btn-primary">Favorites</a>
+    </div>
+    <div class="container" id="movieOutput"></div>
+  </div>
+  <br>
+  <input type="text" class="rating rating-loading" value="0" data-size="xs" title="">
+  <br>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="/dist/app.js"></script>
+  <script src="/lib/node_modules/bootstrap-star-rating/js/star-rating.js" type="text/javascript"></script>
   <!-- <script src="/dist/js/bootstrap.min.js"></script> -->
 </body>
 
