--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <title>Siskel's Daddy Movie History</title>
   <link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
-  <link href="/lib/node_modules/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" href="/lib/node_modules/jquery-bar-rating/dist/themes/bootstrap-stars.css">
 </head>
 
 <body>
@@ -22,8 +22,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <!-- 	        <div class="nav navbar-nav navbar-left">
-	      	</div>
+          <!--          <div class="nav navbar-nav navbar-left">
+          </div>
  --></div>
         <form class="navbar-form navbar-left">
           <div class="form-group">
@@ -52,13 +52,10 @@
     </div>
     <div class="container" id="movieOutput"></div>
   </div>
-  <br>
-  <input type="text" class="rating rating-loading" value="0" data-size="xs" title="">
-  <br>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="/dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="/dist/app.js"></script>
-  <script src="/lib/node_modules/bootstrap-star-rating/js/star-rating.js" type="text/javascript"></script>
-  <!-- <script src="/dist/js/bootstrap.min.js"></script> -->
+  <script src="/lib/node_modules/jquery-bar-rating/dist/jquery.barrating.min.js"></script>
 </body>
 
 </html>
