updated filtering options adjusted some styling

--- a/index.html
+++ b/index.html
@@ -35,14 +35,15 @@
         <div>
         </div>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" id="signIn">Sign In</a></li>
+          <li><a href="#" class="btn" id="signIn"><img src="images/btn_google_signin_dark_pressed_web.png" alt="google sign in button" height="30px"></a></li>
           <li><a href="#" class="hide" id="signOut">Sign Out</a></li>
         </ul>
       </div>
       <!-- /.container-fluid -->
     </nav>
-    <div id='breadCrumbs'>
-      <h1>Movie History ></h1>
+    <div>
+      <h1 id='breadCrumbs'>Movie History ></h1>
+      <h1 id='text'></h1>
     </div>
     <div id='viewTracker' class="btn-group btn-group-justified">
       <a id="showUntrackedBtn" href="#" class="btn btn-primary">Show Untracked</a>
