--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <title>Siskel's Daddy Movie History</title>
   <link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
   <link rel="stylesheet" href="/lib/node_modules/jquery-bar-rating/dist/themes/bootstrap-stars.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
