added smaller breadcrumbs for each star option

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- /.container-fluid -->
     </nav>
     <div>
-      <h1 id='breadCrumbs'>Movie History ></h1>
+      <h1 id='breadCrumbs'>Movie History</h1>
       <h1 id='text'></h1>
     </div>
     <div id='viewTracker' class="btn-group btn-group-justified">
@@ -53,13 +53,13 @@
       <a id="showWatchedBtn" href="#" class="btn btn-primary">Show Watched</a>
       <!-- Favorites Dropdown -->
       <div class="btn-group">
-        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button id="favMenu" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Favorites <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
-          <li><a id="favoritesBtn" href="#">10 Stars</a></li>
-          <li><a href="#">9 Stars or More</a></li>
-          <li><a href="#">8 Stars or More</a></li>
+          <li><a id="favoritesBtn10" href="#">10 Stars</a></li>
+          <li><a id="favoritesBtn9"href="#">9 Stars or More</a></li>
+          <li><a id="favoritesBtn8"href="#">8 Stars or More</a></li>
         </ul>
       </div>
     </div>
